--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
+    "@mui/material": "^7.3.2",
     "@tailwindcss/postcss": "^4.1.13",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
@@ -12,10 +15,16 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^12.3.0",
     "jotai": "^2.14.0",
+    "mui-tel-input": "^9.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-easy-crop": "^5.5.2",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-input-custom": "^1.0.8",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
