--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@tailwindcss/postcss": "^4.1.13",
     "@testing-library/dom": "^10.4.1",
@@ -15,11 +16,14 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^12.3.0",
+    "i18next": "^21.8.15",
+    "i18next-browser-languagedetector": "^6.1.5",
     "jotai": "^2.14.0",
     "mui-tel-input": "^9.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-easy-crop": "^5.5.2",
+    "react-i18next": "^11.18.3",
     "react-international-phone": "^4.6.0",
     "react-phone-input-2": "^2.15.1",
     "react-phone-input-custom": "^1.0.8",
@@ -55,6 +59,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6"
+    "postcss": "^8.5.6",
+    "typescript": "^5.9.2"
   }
 }
