--- a/firebase.json
+++ b/firebase.json
@@ -9,10 +9,12 @@
         "firebase-debug.*.log",
         "*.local"
       ],
-      "source": "functions"
+      "source": "functions",
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
     },
     {
-      "source": "admin",
       "codebase": "admin",
       "ignore": [
         "node_modules",
@@ -20,7 +22,8 @@
         "firebase-debug.log",
         "firebase-debug.*.log",
         "*.local"
-      ]
+      ],
+      "source": "admin"
     }
   ]
 }
