--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^7.3.2",
-    "@mui/material": "^7.3.2",
+    "@mui/material": "^7.3.4",
+    "@mui/system": "^7.3.3",
     "@mui/x-date-pickers": "^8.12.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@testing-library/dom": "^10.4.1",
@@ -20,7 +22,7 @@
     "dayjs": "^1.11.18",
     "firebase": "^12.3.0",
     "i18next": "^21.8.15",
-    "i18next-browser-languagedetector": "^6.1.5",
+    "i18next-browser-languagedetector": "^6.1.8",
     "jotai": "^2.14.0",
     "mui-tel-input": "^9.0.1",
     "react": "^19.1.1",
