--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@mui/system": "^7.3.3",
     "@mui/x-date-pickers": "^8.12.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "@tensorflow-models/blazeface": "^0.1.0",
+    "@tensorflow/tfjs": "^4.22.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
+    "face-api.js": "^0.22.2",
     "firebase": "^12.3.0",
     "i18next": "^21.8.15",
     "i18next-browser-languagedetector": "^6.1.8",
@@ -27,7 +30,7 @@
     "mui-tel-input": "^9.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-easy-crop": "^5.5.2",
+    "react-easy-crop": "^5.5.3",
     "react-i18next": "^11.18.3",
     "react-international-phone": "^4.6.0",
     "react-phone-input-2": "^2.15.1",
