--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@google-cloud/documentai": "^9.4.0",
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
